{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 191,
  "lineage": "9f1a99cb-0577-5b01-76f5-f9329838b4e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f9c27b471bdcd702",
            "arn": "arn:aws:ec2:us-east-1:063088900305:instance/i-0974966093899ffdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0974966093899ffdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e9a89a4244375677"
              }
            ],
            "primary_network_interface_id": "eni-0e9a89a4244375677",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-44-220-179-185.compute-1.amazonaws.com",
            "public_ip": "44.220.179.185",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f192837eb0ec1a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03acdd1073901f3af",
            "tags": {
              "Name": "dev.bastion"
            },
            "tags_all": {
              "Name": "dev.bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa39e2ed6acfcbd",
              "sg-0c4efd04b1371c4ed",
              "sg-0e8a9c8bc3f6e857d",
              "sg-0f9462838269495b6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "i-0974966093899ffdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_security_group.allow_internal",
            "module.shared.aws_security_group.allow_ssh_ingress",
            "module.shared.aws_security_group.allow_web_egress",
            "module.shared.aws_security_group.disable_ipv6_ingress",
            "module.shared.aws_subnet.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "data_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f9c27b471bdcd702",
            "arn": "arn:aws:ec2:us-east-1:063088900305:instance/i-02d7edf74921d9270",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdf",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "datamnt_dev"
                },
                "tags_all": {
                  "Name": "datamnt_dev"
                },
                "throughput": 125,
                "volume_id": "vol-0d3a782bdfffc34aa",
                "volume_size": 4,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d7edf74921d9270",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b80f37e0ca9e3db"
              }
            ],
            "primary_network_interface_id": "eni-04b80f37e0ca9e3db",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082c0eccc5af84921",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03acdd1073901f3af",
            "tags": {
              "Name": "dev.data"
            },
            "tags_all": {
              "Name": "dev.data"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa39e2ed6acfcbd",
              "sg-0c4efd04b1371c4ed",
              "sg-0c88ff75eb7e7fde0",
              "sg-0e8a9c8bc3f6e857d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "i-02d7edf74921d9270",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_security_group.allow_internal",
            "module.shared.aws_security_group.allow_web_egress",
            "module.shared.aws_security_group.allow_web_ingress",
            "module.shared.aws_security_group.disable_ipv6_ingress",
            "module.shared.aws_subnet.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monolith_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f9c27b471bdcd702",
            "arn": "arn:aws:ec2:us-east-1:063088900305:instance/i-0970b8124c612eccb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0970b8124c612eccb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09911b6929d38a904"
              }
            ],
            "primary_network_interface_id": "eni-09911b6929d38a904",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07f142f7306393d17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03acdd1073901f3af",
            "tags": {
              "Name": "dev.monolith"
            },
            "tags_all": {
              "Name": "dev.monolith"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa39e2ed6acfcbd",
              "sg-0c4efd04b1371c4ed",
              "sg-0e8a9c8bc3f6e857d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "i-0970b8124c612eccb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_security_group.allow_internal",
            "module.shared.aws_security_group.allow_web_egress",
            "module.shared.aws_security_group.disable_ipv6_ingress",
            "module.shared.aws_subnet.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f9c27b471bdcd702",
            "arn": "arn:aws:ec2:us-east-1:063088900305:instance/i-0da594afa688c8151",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da594afa688c8151",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-024d1ff9ec98e858d"
              }
            ],
            "primary_network_interface_id": "eni-024d1ff9ec98e858d",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-54-210-115-180.compute-1.amazonaws.com",
            "public_ip": "54.210.115.180",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c1d61d562bf82d6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03acdd1073901f3af",
            "tags": {
              "Name": "dev.proxy"
            },
            "tags_all": {
              "Name": "dev.proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa39e2ed6acfcbd",
              "sg-0c4efd04b1371c4ed",
              "sg-0c88ff75eb7e7fde0",
              "sg-0e8a9c8bc3f6e857d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "i-0da594afa688c8151",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_security_group.allow_internal",
            "module.shared.aws_security_group.allow_web_egress",
            "module.shared.aws_security_group.allow_web_ingress",
            "module.shared.aws_security_group.disable_ipv6_ingress",
            "module.shared.aws_subnet.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:internet-gateway/igw-0cc46678d1d65a544",
            "id": "igw-0cc46678d1d65a544",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:route-table/rtb-0537927da939fbb92",
            "id": "rtb-0537927da939fbb92",
            "owner_id": "063088900305",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc46678d1d65a544",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-table"
            },
            "tags_all": {
              "Name": "dev-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "rtb-0537927da939fbb92",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_internet_gateway.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016a74535c1438615",
            "region": "us-east-1",
            "route_table_id": "rtb-0537927da939fbb92",
            "subnet_id": "subnet-03acdd1073901f3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.aws_internet_gateway.main",
            "module.shared.aws_route_table.main",
            "module.shared.aws_subnet.main",
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-0c4efd04b1371c4ed",
            "description": "Allow internal traffic between instances",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c4efd04b1371c4ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_internal",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-0c4efd04b1371c4ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-0f9462838269495b6",
            "description": "Security group allowing SSH (port 22) ingress for IPv4",
            "egress": [],
            "id": "sg-0f9462838269495b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_ingress",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-0f9462838269495b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-0e8a9c8bc3f6e857d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow IPv4 outbound traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow IPv4 outbound traffic on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 outbound traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 outbound traffic on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e8a9c8bc3f6e857d",
            "ingress": [],
            "name": "allow_web_egress",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-0e8a9c8bc3f6e857d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-0c88ff75eb7e7fde0",
            "description": "Security group allowing HTTP (port 80) and HTTPS (port 443) ingress for IPv4",
            "egress": [],
            "id": "sg-0c88ff75eb7e7fde0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_ingress",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-0c88ff75eb7e7fde0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "disable_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-07fe85ce02b8f0861",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07fe85ce02b8f0861",
            "ingress": [],
            "name": "disable_egress",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-07fe85ce02b8f0861",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "disable_ipv6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:security-group/sg-00fa39e2ed6acfcbd",
            "description": "Security group blocking all IPv6 traffic",
            "egress": [],
            "id": "sg-00fa39e2ed6acfcbd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "disable_ipv6_ingress",
            "name_prefix": "",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "sg-00fa39e2ed6acfcbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:subnet/subnet-03acdd1073901f3af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03acdd1073901f3af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063088900305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0e82e71b664142dcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "subnet-03acdd1073901f3af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.shared.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063088900305:vpc/vpc-0e82e71b664142dcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d9c38591abacf5a",
            "default_route_table_id": "rtb-002168662b2b52cf2",
            "default_security_group_id": "sg-0f085a5cd1f5a56e0",
            "dhcp_options_id": "dopt-0396b50cf23563bd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e82e71b664142dcd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002168662b2b52cf2",
            "owner_id": "063088900305",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "063088900305",
            "id": "vpc-0e82e71b664142dcd",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}